2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/27372
	* java/math/BigInteger.java: Updated copyright year.
	(init): Consume as little bytes as possible.
	(BigInteger(int, int, Random)): Ensure bitLength bits are used.
	(valueOf(String, int)): Throw NumberFormatException for malformed strings
	as per RI's documentation.

2006-08-13  Sven de Marothy  <sven@physto.se>

	* java/util/Locale.java
	(hashcode): Is a serialized field, not transient.
	(equals): Should NOT compare strings by reference.
	(readObject/writeObject): Use the default methods and handle the hash
	seperately.

2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/28678
	* gnu/java/security/Engine.java (getInstance(String, String, Provider)):
	Updated documentation.
	Formatting.
	(getInstance(String, String, Provider, Object[])): Likewise.
	Separate checks for null and empty string arguments.
	Include as much information as possible in the exception's message.
	Do not swallow original exception; instead use it as the cause of the
	resulting exception.
	* gnu/javax/security/auth/callback/AbstractCallbackHandler.java
	(getInstance(String)): Updated documentation.
	Formatting.
	Store last exception caught when iterating through all providers.
	If no implementation found, raise last exception if one was caught.
	(getInstance(String, String)): Updated documentation.
	Formatting.
	Check for null or empty provider as per RI-5's documentation.
	(getInstance(String, Provider)): Updated documentation.
	Formatting.
	Use as much information as possible in the exception message.
	Do not swallow original exception; instead use it as the cause for the
	ultimate raised exception(s).
	* java/security/cert/CertificateFactory.java: Likewise.
	* java/security/cert/CertPathBuilder.java: Likewise.
	* java/security/cert/CertPathValidator.java: Likewise.
	* java/security/cert/CertStore.java: Likewise.
	* java/security/AlgorithmParameterGenerator.java: Likewise.